--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^6.2.0",
     "koa2-cors": "^2.0.6",
     "mysql": "^2.18.1"
   },
